# shape-v2

./: .gitignore  CLAUDE.md  README.md  data_cache  data_raw  pyproject.toml  requirements.txt
configs/: large.yaml  medium.yaml  medium_300m.yaml  small.yaml  smoke_test.yaml
configs/ablations/: input_modes.yaml  latent_grid.yaml  loss_combos.yaml  patch_sizes.yaml  positional.yaml  small_mse_norm.yaml  small_mse_raw.yaml  small_smoothl1_norm.yaml  small_smoothl1_raw.yaml  token_dims.yaml  transformer_depth.yaml
results/: small_v3_eval_val.csv  small_v3_eval_val.json
results/ablations/: ablation_history.csv  run1_mse_raw_eval_val.csv  run1_mse_raw_eval_val.json  run2_mse_norm_eval_val.csv  run2_mse_norm_eval_val.json  run3_smoothl1_raw_eval_val.csv  run3_smoothl1_raw_eval_val.json  run4_smoothl1_norm_eval_val.csv  run4_smoothl1_norm_eval_val.json
scripts/: check_datasets.sh  download_datasets.sh  run_ablations.sh
shape_foundation/: __init__.py
shape_foundation/configs/: __init__.py  default.py
shape_foundation/data/: __init__.py  dataset.py  preprocessing.py  sampling.py  synthetic_labels.py
shape_foundation/models/: __init__.py  gaot_backbone.py  heads.py  processor_transformer.py  tokenizer_magno.py
shape_foundation/preprocessing/: __init__.py  mesh_io.py
shape_foundation/scripts/: eval_backbone.py  infer_mesh.py  plot_eval_metrics.py  prepare_dataset.py  train_finetune.py  train_pretrain.py
shape_foundation/tasks/: __init__.py  captioning.py  primitives.py  symmetry.py  topology_reduction.py
shape_foundation/training/: __init__.py  eval.py  losses.py  trainer.py
wandb/: latest-run
wandb/run-20260409_152010-jihsnck7/: run-jihsnck7.wandb
wandb/run-20260409_152242-hlev6hp9/: run-hlev6hp9.wandb
wandb/run-20260409_152608-pu5nthy6/: run-pu5nthy6.wandb
wandb/run-20260409_153610-z02boejj/: run-z02boejj.wandb
wandb/run-20260409_160408-epkr6e2y/: run-epkr6e2y.wandb
wandb/run-20260409_224706-gsah1o2k/: run-gsah1o2k.wandb
wandb/run-20260410_000008-lo04qgwq/: run-lo04qgwq.wandb
wandb/run-20260410_000422-v33vr4gd/: run-v33vr4gd.wandb
wandb/run-20260410_000955-j5musnuj/: run-j5musnuj.wandb
wandb/run-20260410_005333-61sv36zs/: run-61sv36zs.wandb
(+43 files in other folders)
