[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shape-foundation"
version = "0.1.0"
description = "3D geometry foundation model for simulation-relevant mesh analysis"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "numpy",
    "trimesh",
    "pyyaml",
    "tqdm",
    "tensorboard",
    "einops",
    "meshio",
    "gmsh",
    "scipy",
]

[project.optional-dependencies]
datasets = [
    "huggingface-hub>=0.20",
    "objaverse>=0.1",
]
dev = [
    "pytest>=7.4",
    "ruff>=0.3",
]

[project.scripts]
shape-prepare = "shape_foundation.scripts.prepare_dataset:main"
shape-train = "shape_foundation.scripts.train_pretrain:main"
shape-finetune = "shape_foundation.scripts.train_finetune:main"
shape-eval = "shape_foundation.scripts.eval_backbone:main"
shape-infer = "shape_foundation.scripts.infer_mesh:main"

[tool.setuptools.packages.find]
include = ["shape_foundation*"]
